--- a/public/assets/css/costume-bootstrap.css
+++ b/public/assets/css/costume-bootstrap.css
@@ -14,7 +14,13 @@
 
 /*----------- card ------------*/
 .card{
-	border:  none;
+	background: #fff;
+box-sizing: border-box;
+padding: 13px 20px;
+position: relative;
+border: 1px solid #e2e8f0;
+box-shadow: 0px 0px 30px rgba(200, 208, 216, 0.3);
+border-radius: 10px;
 }
 
 /*----------- breadcrumb ------------*/
