--- a/public/assets/css/costume-style.css
+++ b/public/assets/css/costume-style.css
@@ -13,7 +13,7 @@
   justify-content: space-around;
 }
 .swal-button {
-  background-color: #6f42c1;
+  background-color: var(--primary-collor);
   color: #fff;
   font-size: .8rem;
   padding: 4px 26px;
