--- a/public/assets/css/costume-dashboard.css
+++ b/public/assets/css/costume-dashboard.css
@@ -91,3 +91,41 @@
 .fs-5 {
   font-size: 12px !important;
 }
+
+/*-------------------------------------------------------------*/
+.container-tangki{
+	position: relative;
+	width: 233px;
+	height: 158px; 
+	border: 2px solid #0f0a22;
+	border-radius: 30px;
+	
+
+}
+.container-tangki::before{
+	content: '';
+	width: 40px;
+	height: 16px;
+	border-radius: 6px;
+	background-color: #ed591d;
+	position: absolute;
+	right: 30px;
+	top: -16px;
+}
+.isi-tangki{
+	position: relative;
+	overflow: hidden;
+	width: 100;
+	height: 100%;
+
+	border-radius: 30px;
+}
+
+.isi-tangki::before{
+	content: '';
+	position: absolute;
+	bottom: 0;
+	width:  100%;
+	height: 60%;
+	background-color: #13e700;
+}
