--- a/public/assets/css/costume-dashboard.css
+++ b/public/assets/css/costume-dashboard.css
@@ -141,7 +141,12 @@
 	transform: translate(-50%, -50%);
 }
 
+
+.text-tangki h2 {
+	font-size: 1vw;
+}
 .text-tangki h2 span {
 
 	font-size: 10px;
 }
+
