--- a/public/assets/css/costume-dashboard.css
+++ b/public/assets/css/costume-dashboard.css
@@ -144,7 +144,7 @@
 	bottom: 0;
 	width: 100%;
 	height: 0%;
-	background-color: #13e700;
+	background-color: #c69d3e;
 	animation: 1s ease-out 1s forwards inComeValueTengki;
 
 }
