OTW Add data Documen

--- a/public/assets/css/costume-dashboard.css
+++ b/public/assets/css/costume-dashboard.css
@@ -187,3 +187,9 @@
 	font-weight: normal;
 }
 
+
+/*-------------------------------------------------------------*/
+.doc-show h1 i{
+	font-size: 5rem;
+	color: #929292;
+}
