--- a/public/assets/css/costume-dashboard.css
+++ b/public/assets/css/costume-dashboard.css
@@ -193,3 +193,19 @@
 	font-size: 5rem;
 	color: #929292;
 }
+
+.toast {
+  max-width: 350px;
+  overflow: hidden;
+  font-size: .675rem;
+  background-color: rgba(255,255,255,.85);
+  background-clip: padding-box;
+  border: 1px solid rgba(0,0,0,.1);
+  box-shadow: 0 .25rem .75rem rgba(0,0,0,.1);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  opacity: 0;
+  border-radius: .25rem;
+
+  
+}
